--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,6 @@ RUN apt-get update && apt-get install -y \
     rabbitmq-server \
     redis-server \
     supervisor \
-    memcached \
     git \
     wget \
   && apt-get clean \
@@ -29,8 +28,7 @@ RUN mkdir -p /etc/jasmin/resource \
     /var/log/jasmin \
   && chown jasmin:jasmin /etc/jasmin/store \
     /var/log/jasmin \
-  && pip install -r install-requirements \
-  && python install git+https://github.com/muriloventuroso/jasmin.git
+  && pip install git+https://github.com/muriloventuroso/jasmin.git
 
 # Change binding host for jcli
 RUN sed -i '/\[jcli\]/a bind=0.0.0.0' /etc/jasmin/jasmin.cfg
